--- a/3600522249153-revitalift-laser-x-3-day/index.html
+++ b/3600522249153-revitalift-laser-x-3-day/index.html
@@ -364,7 +364,11 @@
                   skórę i dodaje jej blasku.
                 </p>
               </div>
-              <a href="#" class="es-cross__button">Kup teraz</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/loreal-revitalift-laser-x3-anti-age-serum-30ml-58432.html?query_id=2"
+                class="es-cross__button"
+                >Kup teraz</a
+              >
             </div>
             <div class="es-cross__single">
               <div class="es-cross__packshot es-cross__packshot--2">
@@ -384,7 +388,11 @@
                   wchłonięcia.
                 </p>
               </div>
-              <a href="#" class="es-cross__button">Kup teraz</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy-pod-oczy/loreal-revitalift-laser-x3-krem-pod-oczy-anti-age-15ml-73322.html"
+                class="es-cross__button"
+                >Kup teraz</a
+              >
             </div>
             <div class="es-cross__single">
               <div class="es-cross__packshot es-cross__packshot--3">
@@ -405,7 +413,11 @@
                   przebarwienia.
                 </p>
               </div>
-              <a href="#" class="es-cross__button">Kup teraz</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy/loreal-revitalift-laser-x3-krem-anti-age-na-dzien-50ml-58481.html?query_id=2"
+                class="es-cross__button"
+                >Kup teraz</a
+              >
             </div>
           </div>
         </div>
@@ -438,7 +450,11 @@
                   skórę i dodaje jej blasku.
                 </p>
               </div>
-              <a href="#" class="es-cross__button">Kup teraz</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/loreal-revitalift-laser-x3-anti-age-serum-30ml-58432.html?query_id=2"
+                class="es-cross__button"
+                >Kup teraz</a
+              >
             </div>
             <div class="es-cross__single">
               <div class="es-cross__packshot es-cross__packshot--5">
@@ -456,7 +472,11 @@
                   szyję i dekolt przeciwzmarszczkowy krem na noc.
                 </p>
               </div>
-              <a href="#" class="es-cross__button">Kup teraz</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy/loreal-revitalift-laser-x3-anti-age-krem-40-na-noc-50ml-58483.html?query_id=2"
+                class="es-cross__button"
+                >Kup teraz</a
+              >
             </div>
             <div class="es-cross__single es-cross">
               <div class="es-cross__packshot es-cross__packshot--6">
@@ -479,7 +499,11 @@
                   jako intensywną pielęgnację uzupełniającą codzienną rutynę.
                 </p>
               </div>
-              <a href="#" class="es-cross__button">Kup teraz</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/maseczki/maseczki-na-tkaninie/loreal-revitalift-laser-x3-przeciwzmarszczkowa-maska-do-twarzy-28g-151641.html?query_id=2"
+                class="es-cross__button"
+                >Kup teraz</a
+              >
             </div>
           </div>
         </div>
